# MT8365_Q0_Ayla

./: README.md  image
device/generic/goldfish-opengl/: Android.mk  BUILD.gn  CMakeLists.txt  cmake_transform.py
device/generic/goldfish-opengl/android-emu/: Android.mk  CMakeLists.txt
device/generic/goldfish-opengl/fuchsia/: port.cc
device/generic/goldfish-opengl/shared/OpenglCodecCommon/: Android.mk  CMakeLists.txt  ErrorLog.h  FixedBuffer.h  GLClientState.cpp  GLClientState.h  GLESTextureUtils.cpp  GLESTextureUtils.h  GLSharedGroup.cpp  GLSharedGroup.h  SocketStream.cpp  auto_goldfish_dma_context.cpp  auto_goldfish_dma_context.h  glUtils.cpp  goldfish_address_space.cpp  goldfish_address_space.h  goldfish_dma.cpp  goldfish_dma.h  gralloc_cb.h  qemu_pipe.h  qemu_pipe_host.cpp
device/generic/goldfish-opengl/system/GLESv1/: CMakeLists.txt
device/generic/goldfish-opengl/system/GLESv1_enc/: CMakeLists.txt  GLEncoder.cpp  GLEncoder.h
device/generic/goldfish-opengl/system/GLESv2/: CMakeLists.txt
device/generic/goldfish-opengl/system/GLESv2_enc/: Android.mk  CMakeLists.txt  GL2Encoder.cpp  GL2Encoder.h  GLESv2Validation.cpp  gl2_client_context.cpp  gl2_client_context.h  gl2_client_proc.h  gl2_enc.cpp  gl2_entry.cpp  gl2_opcodes.h
device/generic/goldfish-opengl/system/OpenglSystemCommon/: Android.mk  CMakeLists.txt  EmulatorFeatureInfo.h  FormatConversions.cpp  HostConnection.cpp  HostConnection.h  ProcessPipe.cpp  QemuPipeStream.cpp  QemuPipeStream.h  QemuPipeStreamFuchsia.cpp  ThreadInfo.cpp  VirtioGpuStream.cpp  VirtioGpuStream.h
device/generic/goldfish-opengl/system/egl/: Android.mk  CMakeLists.txt  egl.cpp  eglDisplay.cpp  eglDisplay.h  goldfish_sync.h
device/generic/goldfish-opengl/system/enc_common/: IOStream_common.cpp
device/generic/goldfish-opengl/system/gralloc/: Android.mk  CMakeLists.txt  gralloc.cpp
device/generic/goldfish-opengl/system/hwc2/: Android.mk  EmuHWC2.cpp  EmuHWC2.h  MiniFence.h
device/generic/goldfish-opengl/system/renderControl_enc/: Android.mk  CMakeLists.txt  renderControl_client_context.cpp  renderControl_client_context.h  renderControl_client_proc.h  renderControl_enc.cpp  renderControl_entry.cpp  renderControl_ftable.h  renderControl_opcodes.h
device/generic/goldfish-opengl/system/vulkan/: Android.mk  CMakeLists.txt  func_table.cpp  func_table.h  goldfish_vulkan.cpp
device/generic/goldfish-opengl/system/vulkan_enc/: Android.mk  AndroidHardwareBuffer.cpp  AndroidHardwareBuffer.h  CMakeLists.txt  HostVisibleMemoryVirtualization.cpp  HostVisibleMemoryVirtualization.h  ResourceTracker.cpp  ResourceTracker.h  VkEncoder.cpp  VkEncoder.h  VulkanHandles.h  VulkanStreamGuest.cpp  VulkanStreamGuest.h  goldfish_vk_deepcopy_guest.cpp  goldfish_vk_deepcopy_guest.h  goldfish_vk_extension_structs_guest.cpp  goldfish_vk_extension_structs_guest.h  goldfish_vk_handlemap_guest.cpp  goldfish_vk_handlemap_guest.h  goldfish_vk_marshaling_guest.cpp  goldfish_vk_marshaling_guest.h  goldfish_vk_private_defs.h  goldfish_vk_transform_guest.cpp  goldfish_vk_transform_guest.h  vk_format_info.h  vk_struct_id.h
system/bt/mediatek/: Android.bp  BUILD.gn
system/bt/mediatek/bta/ag/: mtk_bta_ag_cmd.cc
system/bt/mediatek/bta/av/: mtk_bta_av_act.cc
system/bt/mediatek/bta/hh/: bta_hh_int.h  bta_hh_le.cc
system/bt/mediatek/bta/include/: mtk_bta_ag_cmd.h
system/bt/mediatek/btif/: mtk_btif_av.cc  mtk_btif_ble_scanner.cc
system/bt/mediatek/conf/: Android.mk
system/bt/mediatek/config/: log_mode.cc  log_time.cc  mtk_stack_config.cc  snoop_log_config.cc
system/bt/mediatek/hci/: fw_logger_filter.cc  fw_logger_switch.cc  hci_inbound_data_monitor.cc  log_file_controller.cc  log_tree_mgr.cc  log_writer.cc  logs_stats.cc  snoop_packetizer.cc  twrite.cc
system/bt/mediatek/include/: bt_log_command_handler.h  bt_log_controller.h  bt_log_state_observer.h  bt_log_tool.h  bt_logmode_watcher.h  chre_log.h  fw_logger_filter.h  fw_logger_switch.h  hci_inbound_data_monitor.h  interop_database_mtk.h  interop_mtk.h  log_file_controller.h  log_mode.h  log_time.h  log_tree_mgr.h  log_writer.h  logs_stats.h  mdroid_buildcfg.h  mtk_bta_av_act.h  mtk_btif_av.h  mtk_btif_ble_scanner.h  mtk_stack_config.h  mtk_util.h  snoop_log_config.h  snoop_packetizer.h  socket_server.h  twrite.h
system/bt/mediatek/interop/: interop_mtk.cc
system/bt/mediatek/log/: bt_log_command_handler.cc  bt_log_controller.cc  bt_log_tool.cc  bt_logmode_watcher.cc
system/bt/mediatek/packet/avrcp/: application_setting_text_values_packet.cc  application_setting_text_values_packet.h  application_setting_values_packet.cc  application_setting_values_packet.h  list_application_setting_packet.cc  list_application_setting_packet.h  mtk_register_notification_packet.cc
system/bt/mediatek/profile/avrcp/: mtk_device.cc  mtk_packet.h
system/bt/mediatek/stack/a2dp/: a2dp_sbc_encoder.cc
system/bt/mediatek/stack/btm/: btm_int.h  btm_sco.cc
system/bt/mediatek/stack/include/: a2dp_sbc_encoder.h  l2c_api.h  mtk_sdp.h  (+1 more)
system/bt/mediatek/test/: bluetooth_log_unittest.cc
system/bt/mediatek/utils/: mtk_util.cc  socket_client.cc  socket_server.cc
(+9854 files in other folders)
